2010-08-25  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add
	strlen-sse2 strlen-sse2-bsf.
	* sysdeps/i386/i686/multiarch/strlen.S (strlen): Return
	__strlen_sse2_bsf if bit_Slow_BSF is unset.
	(__strlen_sse2): Removed.
	* sysdeps/i386/i686/multiarch/strlen-sse2-bsf.S: New file.
	* sysdeps/i386/i686/multiarch/strlen-sse2.S: New file.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): Set
	bit_Slow_BSF for Atom.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_Slow_BSF): Define.
	(index_Slow_BSF): Define.
	(HAS_SLOW_BSF): Define.

2010-08-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10851]
	* resolv/res_init.c (__res_vinit): When no server address at all
	is given default to loopback.

2010-08-24  Roland McGrath  <roland@redhat.com>

	* configure.in: Remove config-name.h generation.
	* configure: Regenerated.
	* config-name.in: File removed.
	* scripts/config-uname.sh: New file.
	* posix/Makefile (uname.c): Depend on $(objdir)config-name.h.
	($(objdir)config-name.h): New target.

	* sunrpc/rpc_parse.h: Avoid nested comment.

2010-08-24  Richard Henderson  <rth@redhat.com>
	    Ulrich Drepper  <drepper@redhat.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add varshift.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Likewise.
	* sysdeps/x86_64/multiarch/strcspn-c.c: Include "varshift.h".
	Replace _mm_srli_si128 with __m128i_shift_right.  Replace
	_mm_alignr_epi8 with _mm_loadu_si128.
	* sysdeps/x86_64/multiarch/strspn-c.c: Likewise.
	* sysdeps/x86_64/multiarch/strstr.c: Include "varshift.h".
	(__m128i_shift_right): Removed.
	* sysdeps/i386/i686/multiarch/varshift.h: New file.
	* sysdeps/i386/i686/multiarch/varshift.S: New file.
	* sysdeps/x86_64/multiarch/varshift.h: New file.
	* sysdeps/x86_64/multiarch/varshift.S: New file.

2010-08-21  Mike Frysinger  <vapier@gentoo.org>

	* configure.in: Move assembler checks to before sysdep dir checking.
